--- a/ZONE-watcher/app/views/items/widget.html.erb
+++ b/ZONE-watcher/app/views/items/widget.html.erb
@@ -18,7 +18,7 @@
       <div class="newNewsLinkBox" style="display: none;">
         <% lastDate = 0%>
         <% lastDate = @items[0].date if @items.size > 0  %>
-        <%= link_to (items_path(:search => @search.id, :sinceWhen => lastDate, :per_page => "100", :load_on_top => true)), :remote => true ,:class=>"span12 well btn-success btn newNewsLink" do%>
+        <%= link_to (items_path(:search => @search.id, :minDate => lastDate, :per_page => "100", :load_on_top => true)), :remote => true ,:class=>"span12 well btn-success btn newNewsLink" do%>
             <span class="numberOfNewNews">0</span> <%= t('items.newResults')%>
         <%end%>
       </div>
