--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -38,6 +38,8 @@
   <%= javascript_include_tag "bootstrapx-clickover" %>
   <%= javascript_include_tag "jQDateRangeSlider-withRuler-min" %>
   <%= javascript_include_tag "jqcloud" %>
+  <%= javascript_include_tag "URI.min" %>
+  <%= javascript_include_tag "jquery.URI" %>
   <%= javascript_include_tag("/custom-scrollbar-plugin/js/jquery.mCustomScrollbar.concat.min.js")%>
   <%= favicon_link_tag "favicon.png" %>
   <%= javascript_tag do %>
