--- a/ZONE-watcher/app/assets/stylesheets/jQDateRangeSlider-ithing.css
+++ b/ZONE-watcher/app/assets/stylesheets/jQDateRangeSlider-ithing.css
@@ -163,7 +163,16 @@
           box-shadow: inset 0 2px 6px RGBA(0,0,0,0.5);
 }
 
+.ui-rangeSlider-bar{
+  -khtml-opacity:.85;
+  -moz-opacity:.85;
+  -ms-filter:"alpha(opacity=85)";
+  filter:alpha(opacity=85);
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.85);
+  opacity:.85;
+}
 .ui-rangeSlider-disabled .ui-rangeSlider-bar{
+
   background: #93aeca;
 
   -webkit-box-shadow: inset 0 2px 6px RGBA(0,0,0,0.3);
