--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -24,43 +24,43 @@
       <section id="why" class="clearfix">
         <div class="row">
           <div class="span4">
-            <h4><i class="icon-envelope"></i><%= raw t 'moreabout.getintouch.title' %></h4>
+            <h4><span class="fa-envelope"></span> <%= raw t 'moreabout.getintouch.title' %></h4>
             <%= raw t 'moreabout.getintouch.content' %>
           </div>
           <div class="span4">
-            <h4><i class="icon-twitter"></i><%= raw t 'moreabout.twitter.title' %></h4>
+            <h4><span class="fa-twitter"></span> <%= raw t 'moreabout.twitter.title' %></h4>
             <%= raw t 'moreabout.twitter.content' %>
           </div>
           <div class="span4">
-            <h4><i class="icon-fullscreen"></i><%= raw t 'moreabout.scalable.title' %></h4>
+            <h4><span class="fa-tablet"></span> <%= raw t 'moreabout.scalable.title' %></h4>
             <%= raw t 'moreabout.scalable.content' %>
           </div>
         </div>
         <div class="row">
           <div class="span4">
-            <h4><i class=" icon-github"></i><%= raw t 'moreabout.opensource.title' %></h4>
+            <h4><span class=" fa-github"></span> <%= raw t 'moreabout.opensource.title' %></h4>
             <%= raw t 'moreabout.opensource.content' %>
           </div>
           <div class="span4">
-            <h4><i class="icon-rss"></i><%= raw t 'moreabout.rssfeed.title' %> </h4>
+            <h4><span class="fa-rss"></span> <%= raw t 'moreabout.rssfeed.title' %> </h4>
             <%= raw t 'moreabout.rssfeed.content' %>
           </div>
           <div class="span4">
-            <h4><i class="icon-beer"></i><%= raw t 'moreabout.free.title' %></h4>
+            <h4><span class="fa-beer"></span> <%= raw t 'moreabout.free.title' %></h4>
             <%= raw t 'moreabout.free.content' %>
           </div>
         </div>
         <div class="row">
           <div class="span4">
-            <h4><i class="icon-thumbs-up-alt"></i><%= raw t 'moreabout.foryou.title' %></h4>
+            <h4><span class="fa-thumbs-o-up"></span> <%= raw t 'moreabout.foryou.title' %></h4>
             <%= raw t 'moreabout.foryou.content' %>
           </div>
           <div class="span4">
-            <h4><i class="icon-tint"></i><%= raw t 'moreabout.semantic.title' %></h4>
+            <h4><span class="fa-tint"></span> <%= raw t 'moreabout.semantic.title' %></h4>
             <%= raw t 'moreabout.semantic.content' %>
           </div>
           <div class="span4">
-            <h4><i class="icon-zoom-in"></i><%= raw t 'moreabout.veilleurs.title' %></h4>
+            <h4><span class="fa-search-plus"></span> <%= raw t 'moreabout.veilleurs.title' %></h4>
             <%= raw t 'moreabout.veilleurs.content' %>
           </div>
         </div>
@@ -69,7 +69,7 @@
         <div class="row">
           <div class="span4"></div>
           <div class="span4">
-            <h4><i class="icon-user"></i><%= raw t 'moreabout.whosunder.title' %></h4>
+            <h4><span class="fa-user"></span> <%= raw t 'moreabout.whosunder.title' %></h4>
           </div>
           <div class="span4"></div>
         </div>
