--- a/ZONE-watcher/app/views/layouts/_login.html.erb
+++ b/ZONE-watcher/app/views/layouts/_login.html.erb
@@ -4,12 +4,12 @@
     <li class="dropdown">
       <a data-toggle="dropdown" class="dropdown-toggle" href="#">
         <% if current_user.provider == nil || (current_user.provider.include? "reador")%>
-            <b class='icon-user'></b> <%=current_user.email%>
+            <b class='fa-user'></b> <%=current_user.email%>
             <%if current_user.provider != nil && (current_user.provider.include? "twitter") %>
-                (<b class='icon-twitter'></b> <%=current_user.login%>)
+                (<b class='fa-twitter'></b> <%=current_user.login%>)
             <%end%>
         <%elsif (current_user.provider.include? "twitter") %>
-            <b class='icon-twitter'></b> <%=current_user.login%>
+            <b class='fa-twitter'></b> <%=current_user.login%>
         <%end%>
       </a>
       <ul class="dropdown-menu">
